objects/Sub_Category_History__c.object
<CustomObject>
    <description>To store the derived sub category level Scores and the History</description>
    <fields>
        <fullName>Date_Computed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Computed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model_Category_Definition_Formula__c</fullName>
        <formula>Model_Sub_Category_DefinitionLookup__r.Model_Category_Definition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Category_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Category Definition</label>
        <referenceTo>Model_Category_Definition__c</referenceTo>
        <relationshipLabel>Sub Category History</relationshipLabel>
        <relationshipName>Sub_Category_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Sub_Category_DefinitionLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Sub Category Definition</label>
        <referenceTo>Model_Sub_Category_Definition__c</referenceTo>
        <relationshipLabel>Sub Category History</relationshipLabel>
        <relationshipName>Sub_Category_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Sub_Category_Definition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Sub Category Definition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>Score__c</referenceTo>
        <relationshipLabel>Sub Category History</relationshipLabel>
        <relationshipName>Sub_Category_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Score__c</fullName>
        <label>Sub Category Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Sub Category History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Operational</fullName>
        <columns>Model_Sub_Category_DefinitionLookup__c</columns>
        <columns>Sub_Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model_Category_Definition_Formula__c</field>
            <operation>equals</operation>
            <value>Operational</value>
        </filters>
        <label>Operational</label>
    </listViews>
    <listViews>
        <fullName>Ownership</fullName>
        <columns>Model_Sub_Category_DefinitionLookup__c</columns>
        <columns>Sub_Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model_Category_Definition_Formula__c</field>
            <operation>equals</operation>
            <value>Ownership</value>
        </filters>
        <label>Ownership</label>
    </listViews>
    <listViews>
        <fullName>Regulatory</fullName>
        <columns>Model_Sub_Category_DefinitionLookup__c</columns>
        <columns>Sub_Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <columns>Model_Category_Definition_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model_Category_Definition_Formula__c</field>
            <operation>equals</operation>
            <value>Regulatory</value>
        </filters>
        <label>Regulatory</label>
    </listViews>
    <listViews>
        <fullName>Reputational</fullName>
        <columns>Model_Sub_Category_DefinitionLookup__c</columns>
        <columns>Sub_Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model_Category_Definition_Formula__c</field>
            <operation>equals</operation>
            <value>Reputational</value>
        </filters>
        <label>Reputational</label>
    </listViews>
    <listViews>
        <fullName>Transactional</fullName>
        <columns>Model_Sub_Category_DefinitionLookup__c</columns>
        <columns>Sub_Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model_Category_Definition_Formula__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </filters>
        <label>Transactional</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Category History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Category History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>